# Student-Exchange-Web

./: .gitignore  EXPORT_MANIFEST.json  README (2).md  README.md  SETUP.md  create_user.sql  docker-compose.prod.yml  mock_data.sql  test_db_connection.ps1
.antigravity/: rules.md
.cursor/: rules.md
Vietnam_Admin_After_Merge/: README.md
agentic-prod-template/: .env.example  .gitignore  README.md  pyproject.toml
agentic-prod-template-v2/: .env.example  .gitignore  README.md  pyproject.toml
agentic-prod-template-v2/.ai/: AGENTS.md  DEFINITION_OF_DONE.md  PR_CHECKLIST.md
agentic-prod-template-v2/.ai/prompts/: bugfix_template.md  mission_template.md  refactor_guardrails.md
agentic-prod-template-v2/.github/workflows/: ci.yml  security.yml
agentic-prod-template-v2/configs/: agents.yaml  project.yaml  tools_allowlist.yaml
agentic-prod-template-v2/configs/schemas/: agents.schema.json  models.schema.json  project.schema.json  tools_allowlist.schema.json
agentic-prod-template-v2/data/rag/manifests/: last_ingest.json  sources.json
agentic-prod-template-v2/docker/: Dockerfile.runner  docker-compose.yaml
agentic-prod-template-v2/docs/: migration_from_v1.md
agentic-prod-template-v2/docs/architecture/: api.md  boundaries.md  conventions.md  data-model.md  overview.md
agentic-prod-template-v2/docs/runbooks/: local_dev.md
agentic-prod-template-v2/docs/specs/: feature_template.md
agentic-prod-template-v2/tools/: _utils.py  doctor.py  index.py  validate_configs.py
ai-dev-system/: .gitignore  Dockerfile  README.md  requirements.txt
docs/: 00-context.md  (+9 more)
(+497 files in other folders)
