[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-prod-template-v2"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.23.0"
]

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = ["tools"]
